feat: add OS specific details to the user-agent

--- a/tests/cassettes/test_address_retrieve.yaml
+++ b/tests/cassettes/test_address_retrieve.yaml
@@ -15,11 +15,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/addresses
   response:
@@ -84,11 +82,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/addresses/adr_50ad820bcbe811ec9b88ac1f6bc72124
   response:
