--- a/tests/cassettes/test_address_verify.yaml
+++ b/tests/cassettes/test_address_verify.yaml
@@ -15,11 +15,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/addresses
   response:
@@ -86,11 +84,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/addresses/adr_514fe085cbe811ec8c10ac1f6b0a0d1e/verify
   response:
