--- a/tests/cassettes/test_batch_all.yaml
+++ b/tests/cassettes/test_batch_all.yaml
@@ -9,11 +9,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/batches?page_size=5
   response:
