--- a/tests/cassettes/test_customs_info_retrieve.yaml
+++ b/tests/cassettes/test_customs_info_retrieve.yaml
@@ -17,11 +17,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/customs_infos
   response:
@@ -86,11 +84,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/customs_infos/cstinfo_dceb60fc46af4b8bbdb79ba66dce4cc0
   response:
