--- a/tests/cassettes/test_customs_item_retrieve.yaml
+++ b/tests/cassettes/test_customs_item_retrieve.yaml
@@ -14,11 +14,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/customs_items
   response:
@@ -82,11 +80,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/customs_items/cstitem_7242129c27bd40d09eaba1758d8add1f
   response:
