--- a/tests/cassettes/test_order_create.yaml
+++ b/tests/cassettes/test_order_create.yaml
@@ -23,11 +23,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/orders
   response:
