--- a/tests/cassettes/test_parcel_retrieve.yaml
+++ b/tests/cassettes/test_parcel_retrieve.yaml
@@ -13,11 +13,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/parcels
   response:
@@ -80,11 +78,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/parcels/prcl_35d1e841750348679b9970c4123d6935
   response:
