--- a/tests/cassettes/test_refund_retrieve.yaml
+++ b/tests/cassettes/test_refund_retrieve.yaml
@@ -9,11 +9,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/refunds?page_size=5
   response:
@@ -74,11 +72,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/refunds/rfnd_75569d36e3d648b893a875a3070ae92a
   response:
