--- a/tests/cassettes/test_shipment_convert_label.yaml
+++ b/tests/cassettes/test_shipment_convert_label.yaml
@@ -24,11 +24,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
@@ -105,11 +103,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments/shp_6b7295f147ea4ee8b5a65ea481e1eebb/buy
   response:
@@ -180,11 +176,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/shipments/shp_6b7295f147ea4ee8b5a65ea481e1eebb/label?file_format=ZPL
   response:
