--- a/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
+++ b/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
@@ -18,11 +18,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
@@ -93,11 +91,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/shipments/shp_a75e7ef9f90f4d69a3197e1fd5dce15b/smartrate
   response:
