--- a/tests/cassettes/test_shipment_insure.yaml
+++ b/tests/cassettes/test_shipment_insure.yaml
@@ -20,11 +20,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
@@ -99,11 +97,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments/shp_9db7a6ac1ad3405a987ef6224f6064f8/insure
   response:
