--- a/tests/cassettes/test_shipment_retrieve.yaml
+++ b/tests/cassettes/test_shipment_retrieve.yaml
@@ -24,11 +24,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
@@ -101,11 +99,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/shipments/shp_8dfbc4ce548641b78c0966ec6c497bcf
   response:
