--- a/tests/cassettes/test_tracker_retrieve.yaml
+++ b/tests/cassettes/test_tracker_retrieve.yaml
@@ -13,11 +13,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/trackers
   response:
@@ -82,11 +80,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/trackers/trk_b68b2c3788434d0ca26580993c2dd5de
   response:
