--- a/tests/cassettes/test_webhook_create.yaml
+++ b/tests/cassettes/test_webhook_create.yaml
@@ -13,11 +13,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/webhooks
   response:
@@ -82,11 +80,9 @@ interactions:
       Content-Length:
       - '0'
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: DELETE
     uri: https://api.easypost.com/v2/webhooks/hook_7a9a34aacbe811ec81cc394f23051432
   response:
