--- a/tests/cassettes/test_webhook_delete.yaml
+++ b/tests/cassettes/test_webhook_delete.yaml
@@ -13,11 +13,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/webhooks
   response:
@@ -80,11 +78,9 @@ interactions:
       Content-Length:
       - '0'
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: DELETE
     uri: https://api.easypost.com/v2/webhooks/hook_7bb59622cbe811ecbe406de1722528e2
   response:
