--- a/tests/cassettes/test_webhook_retrieve.yaml
+++ b/tests/cassettes/test_webhook_retrieve.yaml
@@ -13,11 +13,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/webhooks
   response:
@@ -78,11 +76,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/webhooks/hook_7affffa6cbe811eca49265eed4e67fcc
   response:
@@ -145,11 +141,9 @@ interactions:
       Content-Length:
       - '0'
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: DELETE
     uri: https://api.easypost.com/v2/webhooks/hook_7affffa6cbe811eca49265eed4e67fcc
   response:
