--- a/tests/cassettes/test_batch_label.yaml
+++ b/tests/cassettes/test_batch_label.yaml
@@ -20,11 +20,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/batches
   response:
@@ -89,11 +87,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/batches/batch_8897ef8c828647fb91b516a968cd26c8/buy
   response:
@@ -158,11 +154,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/batches/batch_8897ef8c828647fb91b516a968cd26c8/label
   response:
