--- a/tests/cassettes/test_order_retrieve.yaml
+++ b/tests/cassettes/test_order_retrieve.yaml
@@ -23,11 +23,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/orders
   response:
@@ -106,11 +104,9 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/orders/order_6136ffab24d84fe9aca2d73d164deb93
   response:
