--- a/tests/cassettes/test_pickup_create.yaml
+++ b/tests/cassettes/test_pickup_create.yaml
@@ -20,11 +20,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
@@ -103,11 +101,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/pickups
   response:
