--- a/tests/cassettes/test_shipment_create_empty_objects.yaml
+++ b/tests/cassettes/test_shipment_create_empty_objects.yaml
@@ -19,11 +19,9 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - EZTK-NONE
+      - <REDACTED>
       user-agent:
-      - easypost/v2 pythonclient/suppressed
-      x-client-user-agent:
-      - suppressed
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/shipments
   response:
