--- a/tests/cassettes/test_address_create_verify_array.yaml
+++ b/tests/cassettes/test_address_create_verify_array.yaml
@@ -2,7 +2,7 @@ interactions:
 - request:
     body: '{"address": {"street1": "417 montgomery street", "street2": "FL 5", "city":
       "San Francisco", "state": "CA", "zip": "94104", "country": "US", "company":
-      "EasyPost", "phone": "415-123-4567"}, "verify": true}'
+      "EasyPost", "phone": "415-123-4567"}, "verify": [true]}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '205'
+      - '207'
       Content-Type:
       - application/json
       authorization:
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_3b3317ee0f6511eda18eac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-07-29T17:38:17+00:00", "updated_at": "2022-07-29T17:38:17+00:00",
+      string: '{"id": "adr_3b80da120f6511eda1aaac1f6b0a0d1e", "object": "Address",
+        "created_at": "2022-07-29T17:38:18+00:00", "updated_at": "2022-07-29T17:38:18+00:00",
         "name": null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 5",
         "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -42,11 +42,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"f161e91a2e4f595eed6e976ffb33bf73"
+      - W/"056ef1431c18520073dbf5f8b1a6dcc8"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_3b3317ee0f6511eda18eac1f6b0a0d1e
+      - /api/v2/addresses/adr_3b80da120f6511eda1aaac1f6b0a0d1e
       pragma:
       - no-cache
       referrer-policy:
@@ -62,18 +62,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 2415913f62e41b09e786b3e10005fc45
+      - 2415913c62e41b0ae786b3fa0005fc74
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq 403f17ff97
       - extlb2nuq 403f17ff97
       x-runtime:
-      - '0.043328'
+      - '0.045200'
       x-version-label:
       - easypost-202207282305-ef64fb0c25-master
       x-xss-protection:
