--- a/tests/cassettes/test_shipment_rerate_with_carbon_offset.yaml
+++ b/tests/cassettes/test_shipment_rerate_with_carbon_offset.yaml
@@ -6,7 +6,7 @@ interactions:
       {"name": "EasyPost", "street1": "417 Montgomery Street", "street2": "5th Floor",
       "city": "San Francisco", "state": "CA", "zip": "94104", "country": "US", "phone":
       "4153334445", "email": "support@easypost.com"}, "parcel": {"length": "20.2",
-      "width": "10.9", "height": "5", "weight": "65.9"}, "service": "Priority", "carrier_accounts":
+      "width": "10.9", "height": "5", "weight": "65.9"}, "service": "First", "carrier_accounts":
       ["ca_b25657e9896e4d63ac8151ac346ac41e"], "carrier": "USPS"}, "carbon_offset":
       false}'
     headers:
@@ -17,7 +17,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '654'
+      - '651'
       Content-Type:
       - application/json
       authorization:
@@ -28,105 +28,18 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-07-28T21:15:58Z", "is_return": false, "messages":
-        [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
-        "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9405500109361130500150", "updated_at": "2022-07-28T21:15:59Z", "batch_id":
-        null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_79cdbea60eba11edb444ac1f6bc72124", "object": "Address", "created_at":
-        "2022-07-28T21:15:58+00:00", "updated_at": "2022-07-28T21:15:58+00:00", "name":
-        "EasyPost", "company": null, "street1": "417 Montgomery Street", "street2":
-        "5th Floor", "city": "San Francisco", "state": "CA", "zip": "94104", "country":
-        "US", "phone": "4153334445", "email": "support@easypost.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_2678f21e885c452981eb196f20adbdf8", "object": "Parcel", "created_at":
-        "2022-07-28T21:15:58Z", "updated_at": "2022-07-28T21:15:58Z", "length": 20.2,
-        "width": 10.9, "height": 5.0, "predefined_package": null, "weight": 65.9,
-        "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_720c7a81601c4476abf26bfe23d61629",
-        "created_at": "2022-07-28T21:15:59Z", "updated_at": "2022-07-28T21:15:59Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2022-07-28T21:15:59Z",
-        "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220728/bec8f78a427c4207a8238ad5dc59d054.png",
-        "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_12ab58849029478eafb584e817d87c5e", "object":
-        "Rate", "created_at": "2022-07-28T21:15:58Z", "updated_at": "2022-07-28T21:15:58Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
-        "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
-        "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_23721ee7a8c849fb946aadbd7e0f7cac",
-        "object": "Rate", "created_at": "2022-07-28T21:15:58Z", "updated_at": "2022-07-28T21:15:58Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
-        "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
-        "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_b0c17015289f4a58bfddacff15aefc7a",
-        "object": "Rate", "created_at": "2022-07-28T21:15:58Z", "updated_at": "2022-07-28T21:15:58Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
-        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
-        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}], "refund_status": null, "scan_form":
-        null, "selected_rate": {"id": "rate_b0c17015289f4a58bfddacff15aefc7a", "object":
-        "Rate", "created_at": "2022-07-28T21:15:59Z", "updated_at": "2022-07-28T21:15:59Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
-        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
-        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, "tracker": {"id": "trk_51625d89fa5f45e781d3837d744660ab",
-        "object": "Tracker", "mode": "test", "tracking_code": "9405500109361130500150",
-        "status": "unknown", "status_detail": "unknown", "created_at": "2022-07-28T21:15:59Z",
-        "updated_at": "2022-07-28T21:15:59Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier": "USPS",
-        "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrXzUxNjI1ZDg5ZmE1ZjQ1ZTc4MWQzODM3ZDc0NDY2MGFi"},
-        "to_address": {"id": "adr_79cb7a260eba11edb7faac1f6bc7b362", "object": "Address",
-        "created_at": "2022-07-28T21:15:58+00:00", "updated_at": "2022-07-28T21:15:59+00:00",
-        "name": "DR. STEVE BRULE", "company": null, "street1": "179 N HARBOR DR",
-        "street2": null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506",
-        "country": "US", "phone": "8573875756", "email": "DR_STEVE_BRULE@GMAIL.COM",
-        "mode": "test", "carrier_facility": null, "residential": false, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
-        [], "details": null}, "delivery": {"success": true, "errors": [], "details":
-        {"latitude": 33.8436, "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_79cdbea60eba11edb444ac1f6bc72124",
-        "object": "Address", "created_at": "2022-07-28T21:15:58+00:00", "updated_at":
-        "2022-07-28T21:15:58+00:00", "name": "EasyPost", "company": null, "street1":
-        "417 Montgomery Street", "street2": "5th Floor", "city": "San Francisco",
-        "state": "CA", "zip": "94104", "country": "US", "phone": "4153334445", "email":
-        "support@easypost.com", "mode": "test", "carrier_facility": null, "residential":
-        null, "federal_tax_id": null, "state_tax_id": null, "verifications": {}},
-        "buyer_address": {"id": "adr_79cb7a260eba11edb7faac1f6bc7b362", "object":
-        "Address", "created_at": "2022-07-28T21:15:58+00:00", "updated_at": "2022-07-28T21:15:59+00:00",
-        "name": "DR. STEVE BRULE", "company": null, "street1": "179 N HARBOR DR",
-        "street2": null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506",
-        "country": "US", "phone": "8573875756", "email": "DR_STEVE_BRULE@GMAIL.COM",
-        "mode": "test", "carrier_facility": null, "residential": false, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
-        [], "details": null}, "delivery": {"success": true, "errors": [], "details":
-        {"latitude": 33.8436, "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}},
-        "forms": [], "fees": [{"object": "Fee", "type": "LabelFee", "amount": "0.00000",
-        "charged": true, "refunded": false}, {"object": "Fee", "type": "PostageFee",
-        "amount": "9.82000", "charged": true, "refunded": false}], "id": "shp_c1e36288c5da4becbd590320ffc1b8a3",
-        "object": "Shipment"}'
+      string: '{"error": {"code": "SHIPMENT.CARRIER_ACCOUNTS.INVALID", "message":
+        "Only one carrier_account_id can be supplied when purchasing a shipment without
+        rating.", "errors": []}}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '6487'
+      - '165'
       content-type:
       - application/json; charset=utf-8
-      etag:
-      - W/"31f2697c9ed5471237720921d47e47af"
       expires:
       - '0'
-      location:
-      - /api/v2/shipments/shp_c1e36288c5da4becbd590320ffc1b8a3
       pragma:
       - no-cache
       referrer-policy:
@@ -142,7 +55,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - b0657e4362e2fc8eff245ee00039632b
+      - 1dc2029e62e45703ec5f3a34000354f2
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -154,193 +67,12 @@ interactions:
       - intlb2wdc 403f17ff97
       - extlb3wdc 403f17ff97
       x-runtime:
-      - '1.082431'
+      - '0.071583'
       x-version-label:
-      - easypost-202207282048-993576a700-master
+      - easypost-202207291722-ecd5579616-master
       x-xss-protection:
       - 1; mode=block
     status:
-      code: 201
-      message: Created
-- request:
-    body: '{"carbon_offset": true}'
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '23'
-      Content-Type:
-      - application/json
-      authorization:
-      - <REDACTED>
-      user-agent:
-      - <REDACTED>
-    method: POST
-    uri: https://api.easypost.com/v2/shipments/shp_c1e36288c5da4becbd590320ffc1b8a3/rerate
-  response:
-    body:
-      string: '{"rates": [{"id": "rate_a27babc9f03f45bdbecf8a2a5f6719be", "object":
-        "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
-        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
-        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_c5e97a5509974cbf868ee8444b8380d4",
-        "object": "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
-        "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
-        "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_8334edeed9ff42fb8d0c31789eb085b6",
-        "object": "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
-        "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
-        "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}]}'
-    headers:
-      cache-control:
-      - no-cache, no-store
-      content-length:
-      - '1890'
-      content-type:
-      - application/json; charset=utf-8
-      etag:
-      - W/"4cd41d7472d005d6f755ffe996d5a54c"
-      expires:
-      - '0'
-      pragma:
-      - no-cache
-      referrer-policy:
-      - strict-origin-when-cross-origin
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains; preload
-      transfer-encoding:
-      - chunked
-      x-backend:
-      - easypost
-      x-content-type-options:
-      - nosniff
-      x-download-options:
-      - noopen
-      x-ep-request-uuid:
-      - b0657e4362e2fc90ff245ee000396389
-      x-frame-options:
-      - SAMEORIGIN
-      x-node:
-      - bigweb9nuq
-      x-permitted-cross-domain-policies:
-      - none
-      x-proxied:
-      - intlb1nuq 403f17ff97
-      - intlb1wdc 403f17ff97
-      - extlb3wdc 403f17ff97
-      x-runtime:
-      - '0.319609'
-      x-version-label:
-      - easypost-202207282048-993576a700-master
-      x-xss-protection:
-      - 1; mode=block
-    status:
-      code: 200
-      message: OK
-- request:
-    body: '{"carbon_offset": false}'
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '24'
-      Content-Type:
-      - application/json
-      authorization:
-      - <REDACTED>
-      user-agent:
-      - <REDACTED>
-    method: POST
-    uri: https://api.easypost.com/v2/shipments/shp_c1e36288c5da4becbd590320ffc1b8a3/rerate
-  response:
-    body:
-      string: '{"rates": [{"id": "rate_66d9bf4c587143d7abd17e3cc59dfe33", "object":
-        "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
-        "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
-        "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_cb70adf898ff46c9a87ee845e4c8e5ee",
-        "object": "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
-        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
-        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_8d61497e81d04e68bffb3931943ba7fa",
-        "object": "Rate", "created_at": "2022-07-28T21:16:00Z", "updated_at": "2022-07-28T21:16:00Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
-        "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
-        "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_c1e36288c5da4becbd590320ffc1b8a3", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}]}'
-    headers:
-      cache-control:
-      - no-cache, no-store
-      content-length:
-      - '1632'
-      content-type:
-      - application/json; charset=utf-8
-      etag:
-      - W/"756c28f36d9885f775cad091bfca9e5c"
-      expires:
-      - '0'
-      pragma:
-      - no-cache
-      referrer-policy:
-      - strict-origin-when-cross-origin
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains; preload
-      transfer-encoding:
-      - chunked
-      x-backend:
-      - easypost
-      x-content-type-options:
-      - nosniff
-      x-download-options:
-      - noopen
-      x-ep-request-uuid:
-      - b0657e4362e2fc90ff245ee0003963ae
-      x-frame-options:
-      - SAMEORIGIN
-      x-node:
-      - bigweb9nuq
-      x-permitted-cross-domain-policies:
-      - none
-      x-proxied:
-      - intlb1nuq 403f17ff97
-      - intlb1wdc 403f17ff97
-      - extlb3wdc 403f17ff97
-      x-runtime:
-      - '0.169444'
-      x-version-label:
-      - easypost-202207282048-993576a700-master
-      x-xss-protection:
-      - 1; mode=block
-    status:
-      code: 200
-      message: OK
+      code: 422
+      message: Unprocessable Entity
 version: 1
